Rename the 'dbservers' and 'solrservers' to singular, since there's only one of each.

--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -19,20 +19,20 @@
 - name: Configure PostgreSQL to listen on localhost
   lineinfile: dest=/var/lib/pgsql/data/postgresql.conf regexp='^#?listen_addresses\s*=' line="listen_addresses = '127.0.0.1'" state=present
   notify: restart postgresql
-  when: groups['webservers']|count == 1 and groups['webservers'][0] == groups['dbservers'][0]
+  when: groups['webservers']|count == 1 and groups['webservers'][0] == groups['dbserver'][0]
 
 # If there's more than one web server, or if the web and db servers aren't
 # the same host, then open up to external hosts, including via iptables
 - name: Configure PostgreSQL to listen for external hosts
   lineinfile: dest=/var/lib/pgsql/data/postgresql.conf regexp='^#?listen_addresses\s*=' line="listen_addresses = '*'" state=present
   notify: restart postgresql
-  when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbservers'][0]
+  when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbserver'][0]
 
 - name: Open iptables firewall for PostgreSQL
   lineinfile: dest=/etc/sysconfig/iptables state=present regexp="5432"
               insertafter="^:OUTPUT " line="-A INPUT -p tcp  --dport 5432 -j  ACCEPT"
   notify: restart iptables
-  when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbservers'][0]
+  when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbserver'][0]
 
 - name: Enable MD5 authentication for PostgreSQL even on localhost
   lineinfile: dest=/var/lib/pgsql/data/pg_hba.conf regexp='host\s+all\s+all\s+127.0.0.1/32\s+md5' line='host all all 127.0.0.1/32 md5' insertbefore=BOF
