--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -7,12 +7,15 @@
     - python-psycopg2
     - postgresql-server
     - postgresql
+  tags: postgresql
 
 - name: Initialize the PostgreSQL database
   command: service postgresql initdb creates=/var/lib/pgsql/data/postgresql.conf
+  tags: postgresql
 
 - name: Start the PostgreSQL server
   service: name=postgresql enabled=yes state=started
+  tags: postgresql
 
 # If there's only one web server and it's the same as the DB server, then only
 # listen on localhost
@@ -20,6 +23,7 @@
   lineinfile: dest=/var/lib/pgsql/data/postgresql.conf regexp='^#?listen_addresses\s*=' line="listen_addresses = '127.0.0.1'" state=present
   notify: restart postgresql
   when: groups['webservers']|count == 1 and groups['webservers'][0] == groups['dbserver'][0]
+  tags: postgresql
 
 # If there's more than one web server, or if the web and db servers aren't
 # the same host, then open up to external hosts, including via iptables
@@ -27,33 +31,40 @@
   lineinfile: dest=/var/lib/pgsql/data/postgresql.conf regexp='^#?listen_addresses\s*=' line="listen_addresses = '*'" state=present
   notify: restart postgresql
   when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbserver'][0]
+  tags: postgresql
 
 - name: Open iptables firewall for PostgreSQL
   lineinfile: dest=/etc/sysconfig/iptables state=present regexp="5432"
               insertafter="^:OUTPUT " line="-A INPUT -p tcp  --dport 5432 -j  ACCEPT"
   notify: restart iptables
   when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['dbserver'][0]
+  tags: postgresql
 
 - name: Enable MD5 authentication for PostgreSQL even on localhost
   lineinfile: dest=/var/lib/pgsql/data/pg_hba.conf regexp='host\s+all\s+all\s+127.0.0.1/32\s+md5' line='host all all 127.0.0.1/32 md5' insertbefore=BOF
   notify: restart postgresql
+  tags: postgresql
 
 - name: Enable MD5 authentication to the local PostgreSQL socket
   lineinfile: dest=/var/lib/pgsql/data/pg_hba.conf regexp='local\s+all\s+all\s+md5' line='local all all md5' insertbefore=BOF
   notify: restart postgresql
+  tags: postgresql
 
 - name: Create the RLetters PostgreSQL database
   sudo_user: postgres
   sudo: yes
   postgresql_db: db=rletters_production
+  tags: database
 
 - name: Create a user with access to the PostgreSQL database
   sudo_user: postgres
   sudo: yes
   postgresql_user: db=rletters_production user=rletters_postgresql priv=ALL password={{ item }}
   with_password: db_{{ inventory_hostname }}_pass length=30
+  tags: database
 
 - name: Tighten privileges on PostgreSQL user
   sudo_user: postgres
   sudo: yes
   postgresql_user: db=rletters_production user=rletters_postgresql role_attr_flags=NOSUPERUSER,NOCREATEDB
+  tags: database
