--- a/roles/web/handlers/main.yml
+++ b/roles/web/handlers/main.yml
@@ -3,3 +3,9 @@
 
 - name: restart iptables
   service: name=iptables state=restarted
+
+- name: restart nginx
+  service: name=nginx state=restarted
+
+- name: restart rsyslogd
+  service: name=rsyslog state=restarted
