Maybe Bluepill doesn't support Fixnum#minutes?

--- a/roles/web/tasks/rletters.yml
+++ b/roles/web/tasks/rletters.yml
@@ -74,8 +74,14 @@
   file: path=/opt/rletters/root/tmp/sockets state=directory
   tags: rletters
 
+- name: Only create the Rails secret tokens once
+  shell: touch /opt/rletters/state/created_secret_tokens creates=/opt/rletters/state/created_secret_tokens
+  result: secret_tokens_flag
+  tags: rletters
+
 - name: Create the Rails secret tokens
   template: src=secret_token.rb.j2 dest=/opt/rletters/state/secret_token.rb
+  when: secret_tokens_flag.changed
   tags: rletters
 
 - name: Symlink the Rails secret tokens
