--- a/roles/web/tasks/rletters.yml
+++ b/roles/web/tasks/rletters.yml
@@ -76,7 +76,7 @@
 
 - name: Only create the Rails secret tokens once
   shell: touch /opt/rletters/state/created_secret_tokens creates=/opt/rletters/state/created_secret_tokens
-  result: secret_tokens_flag
+  register: secret_tokens_flag
   tags: rletters
 
 - name: Create the Rails secret tokens
