--- a/roles/solr/tasks/tomcat.yml
+++ b/roles/solr/tasks/tomcat.yml
@@ -53,7 +53,7 @@
 # If there's more than one web server, or if the Solr and web servers are
 # separate, then open up the port for Tomcat.
 - name: Open iptables firewall for Tomcat
-  lineinfile: dest=/etc/sysconfig/iptables state=present regexp="8080"
+  lineinfile: dest=/etc/sysconfig/iptables state=present regexp="--dport 8080 "
               insertafter="^:OUTPUT " line="-A INPUT -p tcp  --dport 8080 -j  ACCEPT"
   notify: restart iptables
   when: groups['webservers']|count > 1 or groups['webservers'][0] != groups['solrserver'][0]
