--- a/roles/web/tasks/nginx.yml
+++ b/roles/web/tasks/nginx.yml
@@ -9,3 +9,9 @@
   template: src=default.conf.j2 dest=/etc/nginx/conf.d/default.conf
   notify: restart nginx
   tags: nginx
+
+- name: Open port 80 for nginx
+  lineinfile: dest=/etc/sysconfig/iptables state=present regexp="--dport 80 "
+              insertafter="^:OUTPUT " line="-A INPUT -p tcp  --dport 80 -j  ACCEPT"
+  notify: restart iptables
+  tags: nginx
