--- a/roles/web/tasks/rletters.yml
+++ b/roles/web/tasks/rletters.yml
@@ -115,12 +115,12 @@
   tags: rletters
 
 - name: Set the setting to point RLetters at the local Solr server
-  command: chdir=/opt/rletters/root rake setting:set[solr_server_url,http://localhost:8080/solr/]
+  command: chdir=/opt/rletters/root bundle exec rake setting:set[solr_server_url,http://localhost:8080/solr/] RAILS_ENV=production
   when: inventory_hostname == groups['solrserver'][0]
   tags: rletters
 
 - name: Set the setting to point RLetters at the external Solr server
-  command: chdir=/opt/rletters/root rake setting:set[solr_server_url,{{ hostvars[groups['solrserver'][0]]['ansible_eth0']['ipv4']['address'] }}]
+  command: chdir=/opt/rletters/root bundle exec rake setting:set[solr_server_url,{{ hostvars[groups['solrserver'][0]]['ansible_eth0']['ipv4']['address'] }}] RAILS_ENV=production
   when: inventory_hostname != groups['solrserver'][0]
   tags: rletters
 
