Add new deployment for the Stanford NLP package.

--- a/deploy/roles/web/tasks/rletters.yml
+++ b/deploy/roles/web/tasks/rletters.yml
@@ -62,8 +62,24 @@
   file: src=/opt/rletters/state/database.yml path=/opt/rletters/root/config/database.yml state=link
   tags: rletters
 
+- name: Create Java environment configuration file
+  copy: src=00_java_environment.rb dest=/opt/rletters/root/config/initializers/00_java_environment.rb
+  tags: rletters
+
 - name: Create the sockets directory
   file: path=/opt/rletters/root/tmp/sockets state=directory
+  tags: rletters
+
+- name: Fetch the Stanford NLP package
+  get_url: url=http://louismullie.com/treat/stanford-core-nlp-full.zip dest=/tmp/stanford-core-nlp-full.zip
+  tags: rletters
+
+- name: Install unzip
+  yum: name=unzip state=present
+  tags: rletters
+
+- name: Unzip the Stanford NLP package
+  command: chdir=/opt/rletters/root/vendor/nlp/ unzip /tmp/stanford-core-nlp-full.zip creates=/opt/rletters/root/vendor/nlp/stanford-corenlp.jar
   tags: rletters
 
 - name: Create the Unicorn configuration
