Download all files into /opt/downloads, and sync that directory locally, so that downloads will be cached for local deployment script development.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ deploy/hosts
 deploy/roles/db/files/*_pass
 deploy/roles/solr/files/*_pass
 deploy/roles/web/files/*_pass
-
+downloads/*
+!downloads/.gitkeep
