--- a/deploy/roles/web/tasks/ruby-build.yml
+++ b/deploy/roles/web/tasks/ruby-build.yml
@@ -23,7 +23,7 @@
   tags: ruby
 
 - name: Download Ruby
-  get_url: url={{ ruby_url }} dest=/opt/downloads/ruby-build/{{ ruby_filename }}.tar.gz
+  get_url: url={{ ruby_url }} dest=/opt/downloads/{{ ruby_filename }}.tar.gz
   tags: ruby
 
 - name: Extract Ruby
